# genaffirm

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt  scratch.py
authentication/: forms.py  urls.py  views.py
authentication/templates/authentication/: index.html
carts/: forms.py  models.py  stripe.py  urls.py  utils.py  views.py
carts/management/commands/: seed.py
carts/migrations/: 0001_initial.py  0002_cart_stripe_session_id.py
carts/templates/carts/: complete.html  create.html  index.html  show.html
carts/templatetags/: cart_tags.py
genaffirm/: asgi.py  context.py  settings.py  urls.py  wsgi.py
static/css/: main.css
templates/: base.html
